Ikkje send brukertiltak til frontend sidan det ikkje vert brukt der